--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,10 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  <a href="https://www.flaticon.com/free-icons/neural-network" title="neural network icons">Neural network icons created by imaginationlol - Flaticon</a>
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ai_icon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: ai_icon10.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://zacheryfogg.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
